# memuse

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile-distroless  Dockerfile-ubuntu  LICENSE  Makefile  README.md  alloc.go  alloc_test.go  cli.go  cli_test.go  go.mod  integration-tests.sh  it.sh  kube-unlimited.yaml  kube.yaml  main.go  memuse.c  memuse.h  ubuntu.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  test.yml
src/: alloc.c  alloc.h  config.c  config.h  err_handler.c  err_handler.h  memuse.c
test/: alloc_test.c  config_test.c  err_handler_test.c  unit_tests.c
